# Euclid_Rover5

./: .gitignore  CMakeLists.txt  Euclid_Rover5.h  Euclid_Rover5.ino  README.md  package.xml
arduino/: euclid_rover5.ino
arduino/euclid_rover5/: euclid_rover5.h  euclid_rover5.ino
config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  rover5.yaml
launch/: start_rover5.launch
maps/: map.pgm  map.yaml  map.yaml.orig
msg/: Encoder.msg
src/: rover5_node.cpp
